add openapi and rapidoc support, or try
